data/derived/comb/progs/unify/prog7068.ml.out
Characters 193-197:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b list * 'c list
